<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>se.lantz</groupId>
	<artifactId>PCUAEManager</artifactId>
	<version>3.0.1</version>
	<name>PCUAEManager</name>
	<properties>
		<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.32.3.2</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.2.10</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.10</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.11.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.20</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>30.1-jre</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ucanaccess</groupId>
			<artifactId>ucanaccess</artifactId>
			<version>4.0.4</version>
		</dependency>
		<dependency>
			<groupId>com.github.junrar</groupId>
			<artifactId>junrar</artifactId>
			<version>0.7</version>
		</dependency>
		<dependency>
			<groupId>com.github.dyorgio.runtime</groupId>
			<artifactId>run-as-root</artifactId>
			<version>1.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.swinglabs</groupId>
			<artifactId>swingx</artifactId>
			<version>1.6.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<verbose>true</verbose>
					<fork>true</fork>
					<executable>
						<!-- path-to-javac -->
					</executable>
					<compilerVersion>1.8.0</compilerVersion>
					<source>14</source>
					<target>14</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>
										se.lantz.PCUAEManager
									</mainClass>
								</manifest>
								<manifestEntries>
									<buildVersion>
										${project.version}
									</buildVersion>
								</manifestEntries>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.0.1</version>
				<executions>
					<execution>
						<id>l4j-gui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>target/PCUAEManager.exe</outfile>
							<jar>target/PCUAEManager-${project.version}-jar-with-dependencies.jar</jar>
							<errTitle>PCUAEManager</errTitle>
							<chdir>.</chdir>
							<singleInstance>
								<mutexName>PCUAEManager${project.version}</mutexName>
							</singleInstance>
							<classPath>
								<mainClass>se.lantz.PCUAEManager</mainClass>
								<!-- <addDependencies>true</addDependencies> -->
							</classPath>
							<jre>
								<minVersion>14</minVersion>
								<path>./JRE</path>
							</jre>
							<splash>
								<file>target/classes/PCUGameManager.bmp</file>
								<waitForWindow>true</waitForWindow>
								<timeout>30</timeout>
							</splash>
							<icon>target/classes/Icon.ico</icon>
							<versionInfo>
								<fileVersion>${project.version}.1</fileVersion>
								<txtFileVersion>${project.version}}</txtFileVersion>
								<fileDescription>PCUAE Manager</fileDescription>
								<copyright>Lantzelot</copyright>
								<productVersion>${project.version}.1</productVersion>
								<txtProductVersion>${project.version}</txtProductVersion>
								<productName>PCUAE Manager</productName>
								<internalName>pcu</internalName>
								<originalFilename>PCUAEManager.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>